--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2025王道操作系统考研复习指导</title>
+    <title>操作系统复习</title>
     <link rel="stylesheet" href="styles.css">
     
     <!-- 进度条 -->
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>2025王道操作系统考研复习指导</h1>
+            <h1>操作系统复习</h1>
             <p>系统掌握操作系统核心知识点</p>
         </div>
     </header>
@@ -130,7 +130,7 @@ mindmap
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 2025王道操作系统考研复习指导. All rights reserved.</p>
+            <p>&copy; 2025 操作系统复习. All rights reserved.</p>
         </div>
     </footer>
 
